--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,22 @@
 /node_modules
 /public/hot
+/public/css
+/public/js
+/public/image
 /public/storage
 /storage/*.key
 /vendor
 .env
 .env.backup
 .phpunit.result.cache
-docker-compose.override.yml
+.php-cs-fixer.cache
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
+.vapor/
+.env.production
+.env.staging
+.DS_Store
