--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "tailwindcss": "^3.2.6"
+    },
+    "dependencies": {
+        "@tailwindcss/line-clamp": "^0.4.2",
+        "flowbite": "^1.6.3"
     }
 }
