--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
       "framework": null,
     "functions": {
-        "api/index.php": { "runtime": "vercel-php@0.3.1" }
+        "api/index.php": { "runtime": "vercel-php@0.4.0" }
     },
     "routes": [{
         "src": "/(.*)",
@@ -22,14 +22,9 @@
 
         "CACHE_DRIVER": "array",
         "LOG_CHANNEL": "stderr",
-        "SESSION_DRIVER": "cookie",
-        
-        "DB_CONNECTION":"mysql",
-        "DB_HOST":"127.0.0.1",
-        "DB_PORT":"3306",
-        "DB_DATABASE":"outsource",
-        "DB_USERNAME":"root",
-        "DB_PASSWORD":""
+        "SESSION_DRIVER": "cookie"
+
+       
         
     }
 }
