--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,6 +21,7 @@ phases:
     - cp .env.example .env
     - echo generating app key
     - php artisan key:generate
+    - echo $REPOSITORY_URI
     - echo Building the Docker image...
     - docker build -t $REPOSITORY_URI:latest .
     - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
