--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@ DB_HOST=biz-test-1.cc1n9qvmqwzr.us-east-1.rds.amazonaws.com
 DB_PORT=3306
 DB_DATABASE=biz-test-1
 DB_USERNAME=admin
-DB_PASSWORD=Qwertyuiop10!)
+DB_PASSWORD=dbpassword
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
