--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=biz-test-1.cc1n9qvmqwzr.us-east-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=biz-test-1
+DB_DATABASE=biz_outsource
 DB_USERNAME=admin
 DB_PASSWORD=dbpassword
 
